# tracezl

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  build.sh  flake.nix
.github/workflows/: test.yml
src/: champsim_trace.h  common.cpp  common.h  compress.cpp  compressor.cpp  compressor.h  decompress.cpp  main.cpp  train.cpp
test/: sample.trace
